<!--Copyright 2019 Denelle Britton Linebarger, Alana Chigbrow, Anita Martin, David Nelson-->

<!--  Licensed under the Apache License, Version 2.0 (the "License");-->
<!--  you may not use this file except in compliance with the License.-->
<!--  You may obtain a copy of the License at-->

<!--  http://www.apache.org/licenses/LICENSE-2.0-->

<!--  Unless required by applicable law or agreed to in writing, software-->
<!--  distributed under the License is distributed on an "AS IS" BASIS,-->
<!--  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.-->
<!--  See the License for the specific language governing permissions and-->
<!--  limitations under the License.-->

<resources>
    <string name="app_name">ABQ Trails Client Side</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_maps">Maps</string>
    <string name="action_user_profile">Profile</string>
    <string name="action_upload_profile">Upload Profile</string>
    <string name="text_welcome_to_abq_trails">Welcome to ABQ Trails</string>
    <string name="action_reviews">Reviews</string>
    <string name="box_search_location_here">Search Location here</string>
    <string name="action_settings">Settings</string>
    <string name="authentication_error">Unable to authenticate user</string>
    <string name="sign_out">Sign out</string>
    <string name="trail_list">Trail List</string>
    <string name="add_a_rating">Add a Rating</string>
    <string name="an_image_of_the_trail">The placeholder image of a trail.</string>
    <string name="is_horse_trail">An icon indicating if a trail is an equestrian trail.</string>
    <string name="is_bicycle_trail">An icon indicating if a trail is a bicycle trail</string>
    <string name="ratings">Ratings</string>
    <string name="feedback_hint">Tell us what you loved.</string>
    <string name="submit">Submit</string>
    <string name="rating_request">Please rate this trail.</string>
  <string name="rating_1">Very bad.</string>
  <string name="rating_2">Needs some improvements</string>
  <string name="rating_3">Good</string>
  <string name="rating_4">Great</string>
  <string name="rating_5">Awesome</string>
  <string name="feedback_thanks">Thank you for sharing your feedback.</string>
</resources>
