<!--Copyright 2019 Denelle Britton Linebarger, Alana Chigbrow, Anita Martin, David Nelson-->

<!--  Licensed under the Apache License, Version 2.0 (the "License");-->
<!--  you may not use this file except in compliance with the License.-->
<!--  You may obtain a copy of the License at-->

<!--  http://www.apache.org/licenses/LICENSE-2.0-->

<!--  Unless required by applicable law or agreed to in writing, software-->
<!--  distributed under the License is distributed on an "AS IS" BASIS,-->
<!--  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.-->
<!--  See the License for the specific language governing permissions and-->
<!--  limitations under the License.-->

<menu
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context="edu.cnm.deepdive.abqtrailsclientside.MainActivity">


  <item
          android:id="@+id/action_maps"
          android:orderInCategory="100"
          android:title="@string/action_maps"
          app:showAsAction="never"/>

  <item
          android:id="@+id/action_reviews"
          android:orderInCategory="100"
          android:title="@string/action_reviews"
          app:showAsAction="never"/>

<!--  <item-->
<!--          android:id="@+id/action_user_profile"-->
<!--          android:orderInCategory="100"-->
<!--          android:title="@string/action_user_profile"-->
<!--          app:showAsAction="never"/>-->

<!--  <item-->
<!--          android:id="@+id/action_upload_profile"-->
<!--          android:orderInCategory="100"-->
<!--          android:title="@string/action_upload_profile"-->
<!--          app:showAsAction="never"/>-->

  <item
    android:id="@+id/sign_out"
    android:title="@string/sign_out"
    app:showAsAction="never"/>
</menu>
