<?xml version="1.0" encoding="utf-8"?>

<!--  Copyright 2019 Denelle Britton Linebarger, Alana Chigbrow, Anita Martin, David Nelson-->

<!--  Licensed under the Apache License, Version 2.0 (the "License");-->
<!--  you may not use this file except in compliance with the License.-->
<!--  You may obtain a copy of the License at-->

<!--  http://www.apache.org/licenses/LICENSE-2.0-->

<!--  Unless required by applicable law or agreed to in writing, software-->
<!--  distributed under the License is distributed on an "AS IS" BASIS,-->
<!--  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.-->
<!--  See the License for the specific language governing permissions and-->
<!--  limitations under the License.-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:id="@+id/give_rating"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:gravity="center_horizontal"
    android:text="@string/rating_request"
    android:textSize="20sp"
    android:textStyle="italic"/>

  <RatingBar
    android:id="@+id/rating_bar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:theme="@style/RatingsBar"
    android:numStars="5"
    android:stepSize="1"
    android:rating="0"/>

  <TextView
    android:id="@+id/rating_scale"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    android:text=""/>

  <EditText
    android:id="@+id/leave_feedback"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textMultiLine"
    android:lines="5"
    android:hint="@string/feedback_hint"
    android:gravity="top"/>

  <Button
    android:id="@+id/submit_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/submit"
    android:textColor="@android:color/white"/>


</LinearLayout>